Visual tweaks (creating a gutter) and better key handling on mobile webkit, fixes #1

--- a/console.css
+++ b/console.css
@@ -5,10 +5,13 @@ input, textarea { margin: 0; padding: 0; position: relative; font-size: 18px; pa
 #output { font-family: monospace; list-style: none; }
 #output li { margin: 5px 0; padding: 10px; border-bottom: 5px solid #EEEFEE; white-space: pre-wrap; }
 #output li:last-child { border-bottom: 0;}
-#output li.prompt:before { content: '> '; color: #3583FC; font-size: 18px; font-weight: bold; }
-#output li.error:before { content: '⨯ '; color: #E81D20; font-size: 28px; font-weight: bold; margin-right: -10px; line-height: 18px; }
 form { position: absolute; top: 0; width: 100%;}
 #console { position: absolute; left: 0; right: 0; width: 100%; bottom: 0; overflow: auto; border-bottom: 1px solid #5B5C5B; }
+#console span.gutter { float: left; display: block; width: 5px; }
+#console span.prompt:before { content: '> '; color: #3583FC; font-size: 18px; font-weight: bold; }
+#console span.error:before { content: '⨯ '; color: #E81D20; font-size: 28px; font-weight: bold; margin-right: -10px; line-height: 18px; }
+#console span.error:before { content: '\0000D7 '; color: #E81D20; font-size: 28px; font-weight: bold; margin-right: -10px; line-height: 24px; }
+#console div.response { margin-left: 20px; line-height: 20px; }
 #exec { font-family: monospace; width: 100%; border: 0; padding: 5px; outline: 0; background: #eee; -webkit-box-shadow: 0px 2px 10px rgba(0,0,0,.3); }
 iframe { display: none; }
 #exec { background: #E6E8F2; color: #000; border-bottom: 1px solid #AAABB8; height: 24px; line-height: 24px; }
